--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ header nav ul li a:hover {
 }
 
 .dog-card {
-    background-color: #fff;
+    background-color: #feffb5;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgba(0,0,0,0.1);
     padding: 20px;
